--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>What's in Standard?</title>
+    <title>스탠다드엔 어떤 세트가 포함되나요?</title>
     <meta charset="UTF-8">
-    <meta name="description" content="A Magic: The Gathering format describer" />
+    <meta name="description" content="매직: 더 개더링의 스탠다드 포맷을 보기 좋게 설명해주는 웹사이트" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/node_modules/npm-font-open-sans/open-sans.css" type="text/css" />
@@ -25,12 +25,12 @@
       <div class="row">
         <div class="col-md-12">
           <div class="mt-5 mb-3 border-bottom">
-            <h1>What's in Standard?</h1>
+            <h1>스탠다드엔 어떤 세트가 포함되나요?</h1>
             <div>
               <span class="low-distraction">for</span>
-              <span>Magic: The Gathering</span>
+              <span>매직: 더 개더링</span>
               <span class="low-distraction"> / </span>
-              <a href="http://standardhearth.com/" class="low-distraction">Hearthstone</a>
+              <a href="http://standardhearth.com/" class="low-distraction">하스스톤</a>
             </div>
           </div>
         </div>
@@ -42,15 +42,15 @@
         <div v-cloak class="col-md-5">
           <div class="recently-dropped-toggle-container">
             <button id="recently-dropped-toggler" href="#" class="btn btn-sm btn-block btn-outline-secondary mb-3" v-on:click.prevent="toggleRecentlyDropped">
-              <span v-if="!showRecentlyDropped">show last dropped sets</span>
-              <span v-else>hide last dropped sets</span>
+              <span v-if="!showRecentlyDropped">최근에 제외된 세트 표시</span>
+              <span v-else>최근에 제외된 세트 제외</span>
             </button>
           </div>
           <div id="recently-dropped" v-if="showRecentlyDropped">
             <div class="card mb-4" v-for="sets in rounds(dropped(sets))">
+                <div>{{ sets[0].exit_date | relative }}</div>
               <div class="card-header text-muted">
-                <div>Sets dropped {{ sets[0].exit_date | relative }}</div>
-                <small>On {{ sets[0].exit_date | absolute }}</small>
+                <small>날짜: {{ sets[0].exit_date | absolute }}</small>
               </div>
               <ul class="list-group">
                 <li v-for="set in sets" class="list-group-item text-muted">
@@ -71,14 +71,13 @@
               v-tippy="{html: '#why', interactive: true, theme: 'light'}"></a>
               <div id="why" style="display: none" v-tippy-html>
                 <div style="max-width: 50em">
-                  In 2014 <i>Wizards</i> experimented with a drastic change that shrunk blocks, killed Core sets, and
-                  shortened average set lifetime in Standard.<sup><a
+                  이게 무슨 사단이냐고요? 2014년에 매직 더 개더링 개발팀은 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 포함되는 기간을 줄이는 시도를 했었습니다.<sup><a
                     target="_blank"
-                    href="https://magic.wizards.com/en/articles/archive/mm/metamorphosis"
-                  >2</a></sup> The change was reverted in 2017,<sup><a
+                    href="https://magic.wizards.com/ko/articles/archive/mm/%ED%83%88%EB%B0%94%EA%BF%88"
+                  >2</a></sup> 하지만 2017년에 원래 방식으로 돌아가겠다는 발표를 하게 되죠.<sup><a
                     target="_blank"
-                    href="https://magic.wizards.com/en/articles/archive/making-magic/metamorphosis-2-0-2017-06-12"
-                  >3</a></sup> but the aftershock still affects Standard in the sets it left behind. These sets
+                    href="https://magic.wizards.com/ko/articles/archive/making-magic/metamorphosis-2-0-2017-06-12"
+                  >3</a></sup> 하지만 그 후유증은 아직도 지속되고 있는데, but the aftershock still affects Standard in the sets it left behind. These sets
                   will drop in unintuitive ways, ending in Q4 2019.
                 </div>
               </div>
@@ -99,130 +98,131 @@
           </div>
         </div>
         <div class="col-md-7">
-          <h2>What <em>is</em> Standard?</h2>
+          <h2><em>대체</em> 스탠다드가 뭐죠?</h2>
           <p>
-          <b>Standard</b> is a rotating group of <i>Magic: The Gathering</i> sets. Most sets enter Standard when they're
+          <b>스탠다드</b>란 is a rotating group of <i>Magic: The Gathering</i> sets. Most sets enter Standard when they're
           released and drop out about twenty-one months later. At any given time, Standard contains between five and
           eight sets.
           </p>
           <p>
           A <b>Standard card</b> is a card printed or reprinted into a set currently in Standard.
           <a v-tippy class="tip"
-             title="e.g. As long as Naturalize has a reprint currently in Standard, all previous prints of Naturalize
-             are also considered Standard.">
+             title="하나 예를 들자면, 20년 전 발매된 세트인 우르자의 전설에 처음 나왔던 구속이 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 나왔던 구속도 스탠다드에서 사용 가능합니다.">
           </a>
           </p>
           <p>
-          A <b>Standard deck</b> contains only Standard cards (60+ of them), may have a sideboard
+          <b>스탠다드 덱</b>은 60장 이상의 스탠다드 범위 내에 있는 카드만  contains only Standard cards (60+ of them), may have a sideboard
           <a v-tippy class="tip"
-            title='A sideboard is an optional second pool of cards past the main deck that cannot be used during
+            title='사이드보드는 메인 덱과 더불어 구성할 수 있는 추가적인 A sideboard is an optional second pool of cards past the main deck that cannot be used during
             games, but whose cards can be swapped with those from the main deck between games. It is generally used to
             keep counters to specific deck archetypes available without needing to classify any change as an official deck
             edit.'>
-          </a> of up to 15 more Standard cards, and apart from basic lands does not have more than four copies of any
+          </a> of up to 15 more Standard cards, and 기본 대지를 제외하면 apart from basic lands does not have more than four copies of any
           one card
           <a v-tippy class="tip"
-            title="Different prints of the same card count as the same card.">
+            title="다른 판본에 인쇄되었다고 해도 영문 오라클 문구 상 같은 이름을 가진 카드는 같은 카드로 간주합니다.">
           </a>.
           </p>
           <h3 class="mt-5">Related sets and formats</h3>
           <p>
           <a
             target="_blank"
-            href="https://magic.wizards.com/en/articles/archive/ways-play/join-brawl-2018-03-22"><b>Brawl</b></a>
-          is partially based on Standard—all rotations listed here apply to Brawl—but Brawl has a
+            href="https://magic.wizards.com/ko/articles/archive/ways-play/%EB%82%9C%ED%88%AC%EC%97%90-%EC%B0%B8%EC%97%AC%ED%95%98%EC%8B%AD%EC%8B%9C%EC%98%A4-2018-03-22"><b>난투</b></a> 
+          는 스탠다드를 기반으로 만들어졌기 때문에 이 사이트에 명시된 스탠다드 로테이션 제도가 적용되지만, 별개의
           <a
             target="_blank"
             href="https://magic.wizards.com/en/articles/archive/news/future-brawl-2018-05-10"
-          >separate banlist</a>.</p>
+          >금지 목록</a>이 적용됩니다.</p>
           <p>
-          <b>Masters</b> sets never enter Standard.
+          <b>마스터즈</b> 세트(예: 모던 마스터즈, 이터널 마스터즈 등)나 커맨더 덱은 스탠다드에 절대 포함되지 않습니다.
           </p>
-          <h3 class="mt-5">Banlist</h3>
-					<p>Despite being in Standard sets, these cards are explicitly not allowed in Standard decks.</p>
+          <h3 class="mt-5">금지 카드 목록</h3>
+					<p>스탠다드 세트에 발매되었지만 아래 명시된 카드는 스탠다드 덱에 포함될 수 없습니다.</p>
           <p><ul class="list-group">
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Kaladesh"><i class="ss ss-kld"></i></span>
+              <span v-tippy class="icon tip" title="칼라데시"><i class="ss ss-kld"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Aetherworks+Marvel" target="_blank">
-                  Aetherworks Marvel
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419614" target="_blank">
+                  경이로운 에테르 급수장
                 </a>
               </div>
               <small>
-                Banned for not being fun to play against.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/feature/june-13-2017-banned-and-restricted-announcement-2017-06-13">3</a></sup>
+                "스탠다드 환경을 건강하지 않고 흥미롭지 않게 만드는 카드"라서 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/feature/2017%EB%85%84-6%EC%9B%94-14%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80-2017-06-13">3</a></sup>
               </small>
             </li>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Kaladesh"><i class="ss ss-kld"></i></span>
+              <span v-tippy class="icon tip" title="칼라데시"><i class="ss ss-kld"></i></span>
                 <div>
-                <a href="https://deckbox.org/mtg/Attune+with+Aether" target="_blank">
-                  Attune with Aether
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419566" target="_blank">
+                  에테르 조율
                 </a>
               </div>
               <small>
-                Banned for making four-color energy decks too easy.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                4색 에너지 덱 구성을 너무 쉽게 해주는 카드라서 금지되었습니다<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Kaladesh"><i class="ss ss-kld"></i></span>
+              <span v-tippy class="icon tip" title="칼라데시"><i class="ss ss-kld"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Smuggler%27s+Copter" target="_blank">
-                  Smuggler's Copter
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419656" target="_blank">
+                  밀수꾼의 비행선
                 </a>
               </div>
               <small>
-                Banned for being too efficient in too many deck types.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/january-9-2017-banned-and-restricted-announcement-2017-01-09">1</a></sup>
+                Banned for being too efficient in too many deck types.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-9-2017-banned-and-restricted-announcement-2017-01-09">1</a></sup>
               </small>
             </a>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Aether Revolt"><i class="ss ss-aer"></i></span>
+              <span v-tippy class="icon tip" title="에테르 봉기"><i class="ss ss-aer"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Felidar+Guardian" target="_blank">
-                  Felidar Guardian
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=424974" target="_blank">
+                  펠리다르 수호자
                 </a>
               </div>
               <small>
-                Banned for comboing too well with
-                <a href="https://deckbox.org/mtg/Saheeli+Rai" target="_blank">Saheeli Rai</a>.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/addendum-april-24-2017-banned-and-restricted-announcement-2017-04-26">2</a></sup>
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419607" target="_blank">사힐리 라이</a>와 함께 너무 강력한 콤보덱을 구성했기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/2017%EB%85%84-4%EC%9B%94-24%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%9C-%EC%B6%94%EA%B0%80%EC%82%AC%ED%95%AD-2017-04-27">2</a></sup>
               </small>
             </a>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Aether Revolt"><i class="ss ss-aer"></i></span>
+              <span v-tippy class="icon tip" title="에테르 봉기"><i class="ss ss-aer"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Rogue+Refiner" target="_blank">
-                  Rogue Refiner
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=425090" target="_blank">
+                  악당 제련가
                 </a>
               </div>
               <small>
-                Banned for providing so much value as to force energy decks into 3+ colors.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                카드의 효율이 너무 좋고 에너지 덱이 청색을 비롯하여 3색 이상으로 구성하도록 강제하여 에너지 덱의 다양성을 해쳤기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Hour of Devastation"><i class="ss ss-hou"></i></span>
+              <span v-tippy class="icon tip" title="파멸의 시간"><i class="ss ss-hou"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Ramunap+Ruins" target="_blank">
-                  Ramunap Ruins
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=432064" target="_blank">
+                  라무납 폐허
                 </a>
               </div>
               <small>
-                Banned for more-or-less reducing the opponent's effective starting life.<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                사실상 상대방의 생명점을 미리 깎고 시작해서(라고 말할 수 있을 정도로 견제할 수단이 없는 카드였기 때문에) 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
-              <span v-tippy class="icon tip" title="Ixalan"><i class="ss ss-xln"></i></span>
+              <span v-tippy class="icon tip" title="익살란"><i class="ss ss-xln"></i></span>
               <div>
-                <a href="https://deckbox.org/mtg/Rampaging+Ferocidon" target="_blank">
-                  Rampaging Ferocidon
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=436803" target="_blank">
+                  날뛰는 페로시돈
                 </a>
               </div>
               <small>
-                Banned for being too effective a shutdown against counters to aggressive red (filling the board with small creatures and gaining life).<sup><a target="_blank" href="https://magic.wizards.com/en/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                공격적인(어그로) 적색 덱을 상대하기 위한 전략(횡전개 및 생명점 회복)을 너무 효율적으로 맞받아치는 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
           </ul>
           <div class="github mt-4">
             <a target="_blank" href="https://github.com/glacials/whatsinstandard">
               <img src="img/github.png" />
+            </a>
+			<a target="_blank" href="https://github.com/ideocl4st/whatsinstandard">
+              <img src="img/github_kr.png" />
             </a>
           </div>
         </div>
