Minor change before nuking

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <span class="low-distraction">for</span>
               <span>매직: 더 개더링</span>
               <span class="low-distraction"> / </span>
-              <a href="http://standardhearth.com/" class="low-distraction">하스스톤</a>
+              <a href="http://standardhearth.com/" class="low-distraction">하스스톤 (외부 영문 웹사이트)</a>
             </div>
           </div>
         </div>
