--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </div>
           <div id="recently-dropped" v-if="showRecentlyDropped">
             <div class="card mb-4" v-for="sets in rounds(dropped(sets))">
-                <div>{{ sets[0].exit_date | relative }}</div>
               <div class="card-header text-muted">
+                <div>{{ sets[0].exit_date | relative }} 제외된 세트</div>
                 <small>날짜: {{ sets[0].exit_date | absolute }}</small>
-              </div>
+			  </div>
               <ul class="list-group">
                 <li v-for="set in sets" class="list-group-item text-muted">
                   {{ set.name }}
@@ -62,8 +62,8 @@
           </div>
           <div class="card mb-4" v-bind:class="{ 'bg-danger text-light': sets[0].exit_date }" v-for="sets in pad(rounds(standard(sets).concat(unreleased(sets))))">
             <div class="card-header" v-if="sets[0].exit_date">
-              <div>Sets dropping {{ sets[0].exit_date | relative }}</div>
-              <small>On {{ sets[0].exit_date | absolute }}</small>
+              <div>{{ sets[0].exit_date | relative }} 제외될 세트</div>
+              <small>날짜: {{ sets[0].exit_date | absolute }}</small>
             </div>
             <div class="card-header" v-else>
               Sets dropping {{ sets[0].rough_exit_date }}
@@ -89,7 +89,7 @@
                   <set-image v-if="set.code !== null" :code="set.code" />
                 </div>
                 <small v-if="!isReleased(set) && set.enter_date != null">
-                  <div>Releasing {{ set.enter_date | relative }}</div>
+                  <div>{{ set.enter_date | relative }} 발매 예정</div>
                   <div v-if="set.code == 'RNA'">2018년 1월 발매 예정</div>
                   <div v-else="set.code == 'RNA'">On {{ set.enter_date | absolute }}</div>
                 </small>
