--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
           <div class="mt-5 mb-3 border-bottom">
             <h1>스탠다드엔 어떤 세트가 포함되나요?</h1>
             <div>
-              <span class="low-distraction">for</span>
               <span>매직: 더 개더링</span>
               <span class="low-distraction"> / </span>
-              <a href="http://standardhearth.com/" class="low-distraction">하스스톤 (외부 영문 웹사이트)</a>
+              <a href="http://standardhearth.com/" class="low-distraction">하스스톤 (영문 웹사이트)</a>
             </div>
           </div>
         </div>
@@ -98,7 +97,7 @@
           </div>
         </div>
         <div class="col-md-7">
-          <h2><em>대체</em> 스탠다드가 뭐죠?</h2>
+          <h2>스탠다드가 뭐에요?</h2>
           <p>
           <b>스탠다드</b>란 is a rotating group of <i>Magic: The Gathering</i> sets. Most sets enter Standard when they're
           released and drop out about twenty-one months later. At any given time, Standard contains between five and
@@ -240,7 +239,7 @@
     <script src="/js/tracking.js"></script>
 
     <script src="https://deckbox.org/assets/external/tooltip.js"></script>
-    <script>
+<!--    <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -248,6 +247,6 @@
         ga('create', 'UA-2876079-7', 'auto');
         ga('require', 'displayfeatures');
         ga('send', 'pageview');
-    </script>
+    </script> */ -->
   </body>
 </html>
