--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <small>날짜: {{ sets[0].exit_date | absolute }}</small>
             </div>
             <div class="card-header" v-else>
-              Sets dropping {{ sets[0].rough_exit_date }}
+              {{ sets[0].rough_exit_date }} 제외될 세트
               <a v-if="sets[0].code == 'KLD' || sets[0].code == 'AKH' || sets[0].code == 'XLN'" class="tip"
               v-tippy="{html: '#why', interactive: true, theme: 'light'}"></a>
               <div id="why" style="display: none" v-tippy-html>
@@ -126,8 +126,7 @@
           <p>
           <a
             target="_blank"
-            href="https://magic.wizards.com/ko/articles/archive/ways-play/%EB%82%9C%ED%88%AC%EC%97%90-%EC%B0%B8%EC%97%AC%ED%95%98%EC%8B%AD%EC%8B%9C%EC%98%A4-2018-03-22"><b>난투</b></a> 
-          는 스탠다드를 기반으로 만들어졌기 때문에 이 사이트에 명시된 스탠다드 로테이션 제도가 적용되지만, 별개의
+            href="https://magic.wizards.com/ko/articles/archive/ways-play/%EB%82%9C%ED%88%AC%EC%97%90-%EC%B0%B8%EC%97%AC%ED%95%98%EC%8B%AD%EC%8B%9C%EC%98%A4-2018-03-22"><b>난투</b></a>는 스탠다드를 기반으로 만들어졌기 때문에 이 사이트에 명시된 스탠다드 로테이션 제도가 적용되지만, 별개의
           <a
             target="_blank"
             href="https://magic.wizards.com/en/articles/archive/news/future-brawl-2018-05-10"
