--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
               v-tippy="{html: '#why', interactive: true, theme: 'light'}"></a>
               <div id="why" style="display: none" v-tippy-html>
                 <div style="max-width: 50em">
-                  2018년 10월에 한번에 5개의 세트가 제외되는 이유는 2014년에 매직 더 개더링 개발팀이 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 포함되는 기간을 줄이는 시도를 했다가<sup><a
+                  2018년 10월에 세트가 한번에 5개가 제외되는 이유는 위자드에서 2014년에 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 있는 기간을 줄이려고 했다가<sup><a
                     target="_blank"
                     href="https://magic.wizards.com/ko/articles/archive/mm/%ED%83%88%EB%B0%94%EA%BF%88"
                   >2</a></sup> 2017년에 다시 원래 방침으로 돌아가겠다고 발표했기 때문입니다.<sup><a
                     target="_blank"
                     href="https://magic.wizards.com/ko/articles/archive/making-magic/metamorphosis-2-0-2017-06-12"
-                  >3</a></sup> 2019년 4분기 부터는 코어 세트를 포함하여 매년 4개의 세트가 한번에 제외되는 방식으로 진행됩니다.
+                  >3</a></sup> 2019년 4분기 부터는 코어 세트를 포함하여 매년 4개의 세트가 한번에 제외되는 형태로 진행됩니다.
                 </div>
               </div>
             </div>
@@ -98,30 +98,24 @@
         <div class="col-md-7">
           <h2>스탠다드란?</h2>
           <p>
-          <b>스탠다드</b>란 is a rotating group of <i>Magic: The Gathering</i> sets. Most sets enter Standard when they're
-          released and drop out about twenty-one months later. At any given time, Standard contains between five and
-          eight sets.
+          <b>'스탠다드'</b>는 교대로 순환하는 '매직: 더 개더링' 세트의 모음을 의미합니다. 하나의 세트는 대부분 발매와 동시에 스탠다드 범위에 포함되며 약 21개월 뒤에 스탠다드에서 제외됩니다. 스탠다드에 포함되는 세트의 갯수는 최소 5개에서 최대 8개가 될 수도 있습니다.
           </p>
           <p>
-          A <b>Standard card</b> is a card printed or reprinted into a set currently in Standard.
+          '스탠다드에 포함된 카드'는 현재 스탠다드에 포함된 세트에 처음으로 발매됐거나 재발매된 카드를 의미합니다.
           <a v-tippy class="tip"
-             title="하나 예를 들자면, 20년 전 발매된 세트인 우르자의 전설에 처음 나왔던 구속이 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 나왔던 구속도 스탠다드에서 사용 가능합니다.">
+             title="예를 들자면, 구속은 20년 전 발매된 세트인 우르자의 전설에 발매된 카드지만 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 발매된 카드라도 사용이 가능합니다.">
           </a>
           </p>
           <p>
-          <b>스탠다드 덱</b>은 60장 이상의 스탠다드 범위 내에 있는 카드만  contains only Standard cards (60+ of them), may have a sideboard
+          '스탠다드 덱'은 스탠다드에 포함된 카드로만 구성된 60장 이상의 카드와 최대 15장의 사이드보드
           <a v-tippy class="tip"
-            title='사이드보드는 메인 덱과 더불어 구성할 수 있는 추가적인 A sideboard is an optional second pool of cards past the main deck that cannot be used during
-            games, but whose cards can be swapped with those from the main deck between games. It is generally used to
-            keep counters to specific deck archetypes available without needing to classify any change as an official deck
-            edit.'>
-          </a> of up to 15 more Standard cards, and 기본 대지를 제외하면 apart from basic lands does not have more than four copies of any
-          one card
+            title='사이드보드는 메인 덱과 별개로 구성된 최대 15장까지 포함할 수 있는 카드의 모음을 뜻합니다. 사이드보드에 있는 카드는 일반적으로 서고에 포함되지 않지만 게임 사이에 사이드보드에 있는 카드를 메인 덱에 있는 카드와 교환할 수 있습니다. 보통 특정 덱 타입에만 효과적인 카드나 그런 카드에 대처하기 위한 카드를 메인 덱에 포함하지 않고 활용하기 위해 사용됩니다.'>
+          </a>로 구성됩니다. 각 덱에는 동일한 카드를 60장 이상의 메인 덱과 15장 이하의 사이드보드를 합해서 최대 4장까지 사용할 수 있습니다(기본 대지는 예외적으로 원하는 갯수 만큼 사용할 수 있습니다).
           <a v-tippy class="tip"
-            title="다른 판본에 인쇄되었다고 해도 영문 오라클 문구 상 같은 이름을 가진 카드는 같은 카드로 간주합니다.">
+            title="다른 판본에 인쇄되었다고 해도 영문 오라클 문구 상 같은 이름을 가진 카드는 동일한 카드로 간주합니다.">
           </a>.
           </p>
-          <h3 class="mt-5">Related sets and formats</h3>
+          <h3 class="mt-5">이 밖에 알아두면 좋은 세트와 포맷</h3>
           <p>
           <a
             target="_blank"
@@ -131,10 +125,10 @@
             href="https://magic.wizards.com/en/articles/archive/news/future-brawl-2018-05-10"
           >금지 목록</a>이 적용됩니다.</p>
           <p>
-          모던 마스터즈나 이터널 마스터즈를 비롯한 마스터즈 세트나 커맨더 덱은 스탠다드 범위에 포함되지 않습니다.
+          모던 마스터즈나 이터널 마스터즈를 비롯한 마스터즈 세트나 커맨더 덱은 스탠다드 범위에 포함되지 않습니다. (역주: 이니스트라드 이후로 한글판으로 나오지 않은 카드는 스탠다드 범위에 포함된 적이 없습니다.)
           </p>
           <h3 class="mt-5">금지 카드 목록</h3>
-					<p>아래 명시된 카드는 스탠다드 범위에 들어가는 세트에 발매되었지만 각자 사연이 있어 스탠다드 덱에 포함될 수 없습니다.</p>
+					<p>아래 명시된 카드는 스탠다드 범위에 들어가는 세트에 발매되었지만 각자 다른 죄목이 있어 스탠다드 덱에 포함될 수 없습니다.</p>
           <p><ul class="list-group">
             <li class="list-group-item">
               <span v-tippy class="icon tip" title="칼라데시"><i class="ss ss-kld"></i></span>
@@ -155,7 +149,7 @@
                 </a>
               </div>
               <small>
-                4색 에너지 덱 구성을 너무 쉽게 해주는 카드라서 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                에너지를 활용하는 덱이 너무 쉽게 4색을 활용할 수 있도록 하는 카드라서 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
@@ -177,7 +171,7 @@
                 </a>
               </div>
               <small>
-                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419607" target="_blank">사힐리 라이</a>와 함께 너무 강력한 콤보덱을 구성했기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/2017%EB%85%84-4%EC%9B%94-24%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%9C-%EC%B6%94%EA%B0%80%EC%82%AC%ED%95%AD-2017-04-27">2</a></sup>
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419607" target="_blank">사힐리 라이</a>와 함께라면 두려울게 없었기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/2017%EB%85%84-4%EC%9B%94-24%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%9C-%EC%B6%94%EA%B0%80%EC%82%AC%ED%95%AD-2017-04-27">2</a></sup>
               </small>
             </a>
             <li class="list-group-item">
@@ -188,7 +182,7 @@
                 </a>
               </div>
               <small>
-                카드의 성능이 너무 좋아서 에너지를 테마로 한 덱이 청색을 포함한 3색 이상으로 구성되도록 강제하여 에너지 덱의 다양성을 해쳤기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                카드의 성능이 너무 좋아서 에너지를 활용하는 덱이라면 이 카드를 쓰기 위해 청색을 포함해서 3색 이상 덱을 짤 수 밖에 없었기 때문에 에너지 덱의 다양성을 해친다는 이유로 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
@@ -199,7 +193,7 @@
                 </a>
               </div>
               <small>
-                사실상 상대방의 생명점을 미리 깎고 시작해서(라고 말할 수 있을 정도로 견제할 방법이 없던 카드였기 때문에) 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                사실상 상대방의 생명점을 미리 깎고 시작한다고 말할 수 있을 정도로 당하는 입장에선 견제할 방법이 없던 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
@@ -210,7 +204,7 @@
                 </a>
               </div>
               <small>
-                적색 어그로 덱을 상대하기 위한 전략(횡전개 및 생명점 회복)을 완벽하게 무너뜨리는 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                적색 어그로 덱을 상대하기 위한 방법인 생물 횡전개 및 생명점 회복을 완벽하게 맞받아치는 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
           </ul>
