--- a/index.html
+++ b/index.html
@@ -101,31 +101,31 @@
           <b>'스탠다드'</b>는 교대로 순환하는 '매직: 더 개더링' 세트의 모음을 의미합니다. 하나의 세트는 대부분 발매와 동시에 스탠다드 범위에 포함되며 약 21개월 뒤에 스탠다드에서 제외됩니다. 스탠다드에 포함되는 세트의 갯수는 최소 5개에서 최대 8개가 될 수도 있습니다.
           </p>
           <p>
-          '스탠다드에 포함된 카드'는 현재 스탠다드에 포함된 세트에 처음으로 발매됐거나 재발매된 카드를 의미합니다.
+          <b>'스탠다드에 포함된 카드'</b>는 현재 스탠다드에 포함된 세트에 처음으로 발매됐거나 재발매된 카드를 의미합니다.
           <a v-tippy class="tip"
              title="예를 들자면, 구속은 20년 전 발매된 세트인 우르자의 전설에 발매된 카드지만 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 발매된 카드라도 사용이 가능합니다.">
           </a>
           </p>
           <p>
-          '스탠다드 덱'은 스탠다드에 포함된 카드로만 구성된 60장 이상의 카드와 최대 15장의 사이드보드
+          <b>'스탠다드 덱'</b>은 스탠다드에 포함된 카드로만 구성된 60장 이상의 카드와 최대 15장의 사이드보드
           <a v-tippy class="tip"
             title='사이드보드는 메인 덱과 별개로 구성된 최대 15장까지 포함할 수 있는 카드의 모음을 뜻합니다. 사이드보드에 있는 카드는 일반적으로 서고에 포함되지 않지만 게임 사이에 사이드보드에 있는 카드를 메인 덱에 있는 카드와 교환할 수 있습니다. 보통 특정 덱 타입에만 효과적인 카드나 그런 카드에 대처하기 위한 카드를 메인 덱에 포함하지 않고 활용하기 위해 사용됩니다.'>
           </a>로 구성됩니다. 각 덱에는 동일한 카드를 60장 이상의 메인 덱과 15장 이하의 사이드보드를 합해서 최대 4장까지 사용할 수 있습니다(기본 대지는 예외적으로 원하는 갯수 만큼 사용할 수 있습니다).
           <a v-tippy class="tip"
             title="다른 판본에 인쇄되었다고 해도 영문 오라클 문구 상 같은 이름을 가진 카드는 동일한 카드로 간주합니다.">
-          </a>.
+          </a>
           </p>
           <h3 class="mt-5">이 밖에 알아두면 좋은 세트와 포맷</h3>
           <p>
           <a
             target="_blank"
-            href="https://magic.wizards.com/ko/articles/archive/ways-play/%EB%82%9C%ED%88%AC%EC%97%90-%EC%B0%B8%EC%97%AC%ED%95%98%EC%8B%AD%EC%8B%9C%EC%98%A4-2018-03-22"><b>난투</b></a>는 스탠다드를 기반으로 만들어진 포맷이기 때문에 스탠다드와 동일하게 세트가 제외되지만 고유의
+            href="https://magic.wizards.com/ko/articles/archive/ways-play/%EB%82%9C%ED%88%AC%EC%97%90-%EC%B0%B8%EC%97%AC%ED%95%98%EC%8B%AD%EC%8B%9C%EC%98%A4-2018-03-22"><b>난투</b></a>는 스탠다드를 기반으로 만들어진 포맷이기 때문에 세트 순환 시기가 스탠다드와 동일하지만 고유의
           <a
             target="_blank"
             href="https://magic.wizards.com/en/articles/archive/news/future-brawl-2018-05-10"
           >금지 목록</a>이 적용됩니다.</p>
           <p>
-          모던 마스터즈나 이터널 마스터즈를 비롯한 마스터즈 세트나 커맨더 덱은 스탠다드 범위에 포함되지 않습니다. (역주: 이니스트라드 이후로 한글판으로 나오지 않은 카드는 스탠다드 범위에 포함된 적이 없습니다.)
+          모던 마스터즈나 이터널 마스터즈를 비롯한 마스터즈 세트나 커맨더 덱은 스탠다드 범위에 포함되지 않습니다. (역주: 이니스트라드 이후 한글판으로 나오지 않은 카드는 스탠다드 범위에 포함된 적이 없습니다.)
           </p>
           <h3 class="mt-5">금지 카드 목록</h3>
 					<p>아래 명시된 카드는 스탠다드 범위에 들어가는 세트에 발매되었지만 각자 다른 죄목이 있어 스탠다드 덱에 포함될 수 없습니다.</p>
@@ -171,7 +171,7 @@
                 </a>
               </div>
               <small>
-                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419607" target="_blank">사힐리 라이</a>와 함께라면 두려울게 없었기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/2017%EB%85%84-4%EC%9B%94-24%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%9C-%EC%B6%94%EA%B0%80%EC%82%AC%ED%95%AD-2017-04-27">2</a></sup>
+                <a href="http://gatherer.wizards.com/Pages/Card/Details.aspx?multiverseid=419607" target="_blank">사힐리 라이</a>와 조합한 콤보가 너무 강력했기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/2017%EB%85%84-4%EC%9B%94-24%EC%9D%BC-%EA%B8%88%EC%A7%80-%EB%B0%8F-%EC%A0%9C%ED%95%9C-%EB%AA%A9%EB%A1%9D-%EA%B3%B5%EC%A7%80%EC%97%90-%EB%8C%80%ED%95%9C-%EC%B6%94%EA%B0%80%EC%82%AC%ED%95%AD-2017-04-27">2</a></sup>
               </small>
             </a>
             <li class="list-group-item">
