--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               v-tippy="{html: '#why', interactive: true, theme: 'light'}"></a>
               <div id="why" style="display: none" v-tippy-html>
                 <div style="max-width: 50em">
-                  이때 한번에 5개의 세트가 제외되는 이유는 위자드에서 2014년에 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 있는 기간을 줄이려고 했다가<sup><a
+                  이때만 한번에 5개의 세트가 제외되는 이유는 위자드에서 2014년에 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 있는 기간을 줄이려고 했다가<sup><a
                     target="_blank"
                     href="https://magic.wizards.com/ko/articles/archive/mm/%ED%83%88%EB%B0%94%EA%BF%88"
                   >2</a></sup> 2017년에 다시 원래 방침으로 돌아가겠다고 발표했기 때문입니다.<sup><a
@@ -103,14 +103,14 @@
           <p>
           <b>'스탠다드에 포함된 카드'</b>는 현재 스탠다드에 포함된 세트에 처음으로 발매됐거나 재발매된 카드를 의미합니다.
           <a v-tippy class="tip"
-             title="예를 들자면, 구속은 20년 전 발매된 세트인 우르자의 전설에 발매된 카드지만 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 발매된 카드라도 사용이 가능합니다.">
+             title="예를 들자면, 구속은 1998년 발매된 세트인 우르자의 전설에 처음 발매된 카드지만, 현재 스탠다드에 포함되는 세트에서 재발매가 되었다면 20년 전 발매된 구속이라도 사용이 가능합니다.">
           </a>
           </p>
           <p>
           <b>'스탠다드 덱'</b>은 스탠다드에 포함된 카드로만 구성된 60장 이상의 카드와 최대 15장의 사이드보드
           <a v-tippy class="tip"
             title='사이드보드는 메인 덱과 별개로 구성된 최대 15장까지 포함할 수 있는 카드의 모음을 뜻합니다. 사이드보드에 있는 카드는 일반적으로 서고에 포함되지 않지만 게임 사이에 사이드보드에 있는 카드를 메인 덱에 있는 카드와 교환할 수 있습니다. 보통 특정 덱 타입에만 효과적인 카드나 그런 카드에 대처하기 위한 카드를 메인 덱에 포함하지 않고 활용하기 위해 사용됩니다.'>
-          </a>로 구성됩니다. 각 덱에는 동일한 카드를 60장 이상의 메인 덱과 15장 이하의 사이드보드를 합해서 최대 4장까지 사용할 수 있습니다(기본 대지는 예외적으로 원하는 갯수 만큼 사용할 수 있습니다).
+          </a>로 구성됩니다. 각 덱에는 동일한 카드를 메인 덱과 사이드보드를 합해서 최대 4장까지 사용할 수 있습니다(예외적으로 기본 대지는 원하는 장수 만큼 사용할 수 있습니다).
           <a v-tippy class="tip"
             title="다른 판본에 인쇄되었다고 해도 영문 오라클 문구 상 같은 이름을 가진 카드는 동일한 카드로 간주합니다.">
           </a>
@@ -149,7 +149,7 @@
                 </a>
               </div>
               <small>
-                에너지를 활용하는 덱이 너무 쉽게 4색을 활용할 수 있도록 하는 카드라서 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                에너지를 활용하는 덱이 너무 쉽게 4색으로 덱을 짤 수 있도록 하는 카드라서 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
@@ -182,7 +182,7 @@
                 </a>
               </div>
               <small>
-                카드의 성능이 너무 좋아서 에너지를 활용하는 덱이라면 이 카드를 쓰기 위해 청색을 포함해서 3색 이상 덱을 짤 수 밖에 없었기 때문에 에너지 덱의 다양성을 해친다는 이유로 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                카드의 성능이 너무 좋아서 에너지를 활용하는 덱이라면 이 카드를 쓰기 위해 청색을 포함한 3색 이상의 덱을 짤 수 밖에 없었기 때문에 에너지 덱의 다양성을 해친다는 이유로 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
             <li class="list-group-item">
@@ -204,7 +204,7 @@
                 </a>
               </div>
               <small>
-                적색 어그로 덱을 상대하기 위한 방법인 생물 횡전개 및 생명점 회복을 완벽하게 맞받아치는 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
+                적색 어그로 덱을 상대하기 위한 효과 방법인 생물 횡전개 및 생명점 회복을 완벽하게 맞받아치는 카드였기 때문에 금지되었습니다.<sup><a target="_blank" href="https://magic.wizards.com/ko/articles/archive/news/january-15-2018-banned-and-restricted-announcement-2018-01-15">4</a></sup>
               </small>
             </li>
           </ul>
