--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
               v-tippy="{html: '#why', interactive: true, theme: 'light'}"></a>
               <div id="why" style="display: none" v-tippy-html>
                 <div style="max-width: 50em">
-                  이때만 한번에 5개의 세트가 제외되는 이유는 위자드에서 2014년에 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 있는 기간을 줄이려고 했다가<sup><a
+                  2018년에 제외되는 세트까지는 이후에 나온 세트와는 순환이 다르게 적용됩니다. 그 이유는 위자드에서 2014년에 블럭을 축소하고 코어 세트를 폐지하면서 각 세트가 스탠다드에 있는 기간을 줄이려고 했다가<sup><a
                     target="_blank"
                     href="https://magic.wizards.com/ko/articles/archive/mm/%ED%83%88%EB%B0%94%EA%BF%88"
                   >2</a></sup> 2017년에 다시 원래 방침으로 돌아가겠다고 발표했기 때문입니다.<sup><a
                     target="_blank"
                     href="https://magic.wizards.com/ko/articles/archive/making-magic/metamorphosis-2-0-2017-06-12"
-                  >3</a></sup> 따라서 2019년 4분기부터는 코어 세트를 포함하여 매년 4개의 세트가 한번에 제외되는 형태로 진행됩니다.
+                  >3</a></sup> 따라서 2019년 4분기부터는 매년 1개의 블럭과 코어 세트를 합하여 한번에 4개의 세트가 제외되는 형태로 진행됩니다.
                 </div>
               </div>
             </div>
